# QSimpleXlsxWriter

./: .gitignore  .licrc  .travis.yml  LICENSE  README.md  _config.yml
HelloQSimpleXlsxWriter/: Hello.pro  Images.cpp  Scientific.cpp  Scientific.pro
QSimpleXlsxWriter/: QSimpleXlsxWriter.pri  QSimpleXlsxWriter.pro
Samples/: DefinedNames.cpp  DefinedNames.xlsx  Hello.pro  Image.tif  Images.cpp  Images.pro  Images.xlsx  MultiCharts.cpp  MultiCharts.pro  MultiCharts.xlsx  Scientific.cpp  Scientific.xlsx  Simple.cpp  Simple.pro  Simple.xlsx  main.cpp
simplexlsx-code/: CMakeLists.txt  PathManager.cpp  PathManager.hpp  Readme.txt  UTF8Encoder.hpp  XMLWriter.hpp
simplexlsx-code/XLSXColors/: XLSXColorLib.cpp  XLSXColorLib.h  clsRGBColorRecord.cpp  clsRGBColorRecord.h
simplexlsx-code/Xlsx/: Chart.cpp  Chart.h  Chartsheet.cpp  Chartsheet.h  Drawing.cpp  Drawing.h  SimpleXlsxDef.cpp  SimpleXlsxDef.h  Workbook.cpp  Workbook.h  Worksheet.cpp  Worksheet.h  XlsxHeaders.cpp  XlsxHeaders.h  mainpage.dox
simplexlsx-code/Zip/: zip.cpp  zip.h
